--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,43 @@
-:root {
-  --font-family: "Golos Text", sans-serif;
-  --second-family: "Merriweather", sans-serif;
-  --third-family: "Montserrat", sans-serif;
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'),
+    url('/fonts/Montserrat/Montserrat-Medium.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  src: local('Merriweather'),
+    url('/fonts/Merriweather/Merriweather-Regular.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Golos Text';
+  src: local('Golos Text'),
+    url('/fonts/Golos_Text/Golos-Text_Regular.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Golos Text';
+  src: local('Golos Text'),
+    url('/fonts/Golos_Text/Golos-Text_Medium.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Golos Text';
+  src: local('Golos Text'),
+    url('/fonts/Golos_Text/Golos-Text_DemiBold.ttf') format('ttf');
+}
+
+@font-face {
+  font-family: 'Golos Text';
+  src: local('Golos Text'),
+    url('/fonts/Golos_Text/Golos-Text_Bold.ttf') format('ttf');
 }
 
 /* Reset and base styles  */
 * {
   padding: 0px;
   margin: 0px;
-  border: none;
 }
 
 *,
@@ -17,98 +46,11 @@
   box-sizing: border-box;
 }
 
-/* Links */
-
-a,
-a:link,
-a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-/* Common */
-
-aside,
-nav,
-footer,
-header,
-section,
-main {
-  display: block;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-ul,
-ul li {
-  list-style: none;
-}
-
-address {
-  font-style: normal;
-}
-
-/* Form */
-
-input,
-textarea,
-button,
-select {
-  font-family: inherit;
-  font-size: inherit;
-  color: inherit;
-  background-color: transparent;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button,
-input[type="submit"] {
-  display: inline-block;
-  box-shadow: none;
-  background-color: transparent;
-  background: none;
-  cursor: pointer;
-}
-
-input:focus,
-input:active,
-button:focus,
-button:active {
-  outline: none;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-label {
-  cursor: pointer;
-}
-
-legend {
-  display: block;
-}
-
 /* end reset style */
 
 .container {
   width: 1222px;
+  margin: 0 auto;
 }
 
 .main {
@@ -430,7 +372,6 @@ legend {
   font-weight: 600;
   font-size: 20px;
   line-height: 120%;
-  /* identical to box height, or 24px */
   font-feature-settings: 'pnum' on,
     'lnum' on;
 
@@ -462,6 +403,279 @@ legend {
 }
 
 /* end section session */
+/* section stages */
+.stages {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 200px;
+}
+
+.stages-inner-title {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: flex-start;
+
+  width: 806px;
+  height: 130px;
+  margin-bottom: 54px;
+}
+
+.stages-title {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 120%;
+  text-transform: uppercase;
+  font-feature-settings: 'pnum' on,
+    'lnum' on;
+
+  color: #313131;
+}
+
+.stages-subtitle {
+  width: 280px;
+
+  font-family: 'Golos Text';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  text-transform: none;
+  font-feature-settings: 'pnum' on,
+    'lnum' on;
+
+  color: #3057A2;
+}
+
+.stages-blocks {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 20px;
+
+}
+
+.stages-blocks_airplane {
+  position: absolute;
+  right: -62px;
+  top: 168px;
+
+  width: 400.36px;
+}
+
+.stages-blocks_airplane img {
+  height: 100%;
+  width: 100%;
+}
+
+.item-1 {
+  width: 394px;
+  height: 112px;
+}
+
+.item-2 {
+  width: 394px;
+  height: 112px;
+}
+
+.item-3 {
+  grid-row: span 2;
+  width: 394px;
+  height: 244px;
+}
+
+.item-4 {
+  width: 394px;
+  height: 112px;
+}
+
+.item-5 {
+  width: 394px;
+  height: 112px;
+}
+
+.item-6 {
+  width: 394px;
+  height: 136px;
+}
+
+.item-7 {
+  grid-column: span 2;
+  width: 808px;
+  height: 136px;
+}
+
+.item-7 .text {
+  width: 446px;
+}
+
+.number {
+  padding: 20px 16px 20px 20px;
+}
+
+.number img {
+  height: 36px;
+  width: 36px;
+}
+
+.text {
+  padding: 20px 20px 20px 0;
+
+  font-family: 'Golos Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 120%;
+  font-feature-settings: 'pnum' on, 'lnum' on;
+  color: #313131;
+}
+
+.blocks-item {
+  display: flex;
+
+  background-image: url("../img/background-blocks.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+/* end section stages */
+
+/* section participants */
+.participants-inner {
+  margin-bottom: 60px;
+}
+
+.participants-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 60px;
+}
+
+.participants-title {
+  width: 806px;
+  height: 65px;
+
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 54px;
+  line-height: 120%;
+  text-transform: uppercase;
+  font-feature-settings: 'pnum' on, 'lnum' on;
+
+  color: #313131;
+}
+
+.participants-arrows {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 151px;
+  height: 44px;
+}
+
+.pages {
+  font-family: 'Golos Text';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 120%;
+  font-feature-settings: 'pnum' on, 'lnum' on;
+  color: #313131;
+}
+
+.participants-slider {
+  display: flex;
+  align-items: flex-start;
+}
+
+.slider-page {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+
+.slider-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+
+  min-width: 394px;
+  height: 462px;
+
+}
+
+.slider-foto {
+  width: 320px;
+  height: 320px;
+  margin-bottom: 28px;
+}
+
+.slider-foto img {
+  width: 100%;
+  height: 100%;
+}
+
+.slider-name {
+  font-family: 'Golos Text';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 120%;
+  font-feature-settings: 'pnum' on, 'lnum' on;
+
+  color: #313131;
+}
+
+.slider-rank {
+  font-family: 'Golos Text';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  font-feature-settings: 'pnum' on, 'lnum' on;
+  color: #313131;
+  opacity: 0.6;
+
+  margin-bottom: 20px;
+}
+
+.slider-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+
+  width: 113px;
+  height: 35px;
+
+  border: 1px solid #3057A2;
+  border-radius: 62px;
+  background-color: transparent;
+
+  font-family: 'Golos Text';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 120%;
+  color: #3057A2;
+}
+
+/* end section participants */
+
+
 
 /* footer */
 .tickers-inner-footer {
